Fix bugs with empty env var, comment out gc expt